--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.gracerun</groupId>
-    <artifactId>demo</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <artifactId>security</artifactId>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
-    <name>${project.artifactId} ${project.version}</name>
+    <name>${project.artifactId}</name>
+    <description>spring boot starter for security</description>
+    <url>https://github.com/gracerun/summer</url>
 
     <modules>
-        <module>api-test</module>
-        <module>consumer-test</module>
-        <module>producer-test</module>
+        <module>security-authentication</module>
+        <module>security-authorization</module>
     </modules>
-
 
 </project>
