--- a/security-authentication/pom.xml
+++ b/security-authentication/pom.xml
@@ -13,9 +13,13 @@
 
     <artifactId>security-authentication</artifactId>
     <packaging>jar</packaging>
-    <name>${project.artifactId} ${project.version}</name>
+    <name>${project.artifactId}</name>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
