--- a/security-authorization/pom.xml
+++ b/security-authorization/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>security-authorization</artifactId>
     <packaging>jar</packaging>
-    <name>${project.artifactId} ${project.version}</name>
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
